    - x2goserver/bin/x2goupdateoptionsstring: fix syntax and strict mode
      errors.
    - X2Go/Server/Agent/NX/Options.pm: simplify error handling by splitting
      intermediate checking out into a separate subroutine.
    - X2Go/Server/Agent/NX/Options.pm: rename $options variable to
      $intermediate in intermediate_to_string () for internal consistency.
  * debian/control:
    + Build-depend upon lsb-release for distro version detection.
  * debian/x2goserver.manpages:
    + Install x2gocleansessions man page.
    + Install x2goupdateoptionsstring man page.
  * x2goserver.spec:
    + Install new x2goisint wrapper.
    + Install section 1 man pages.
    + Exclude x2goagent man page from x2goserver package.
    + Pass down LIBDIR via make calls, not by modifying all source files with
      sed.
    + X2Go KDrive package has been renamed to xorg-x11-server-x2gokdrive to be
      in line with general RPM package names.
  * debian/x2goserver.install:
    + Install bin/x2goupdateoptionsstring.
  * debian/rules:
    + Export and pass down LIBDIR.
    + Fix standalone make call by specifying PREFIX, NXLIBDIR and LIBDIR
      explicitly.
    + Fix quoting. Since make does not interpret single or double quotes, each
      string should only be quoted once (so that the shell can parse the
      quoted result). Quote the values in the variable directly and try not to
      "double-quote" the resulting string.
  * debian/libx2go-server-perl.install:
    + Remove duplicated entry for X2Go/Utils.pm.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.4):
    - Add support for X2Go KDrive.
    - x2goruncommand: start Xsession on X2Go KDrive desktops.

  [ Tom Ruzicka ]
  * debian/po: Add Czech debconf translation.

  [ Ulrich Sibiller ]
  * New upstream version (4.1.0.4):
    - x2goserver-x2goagent/etc/keystrokes.cfg: sync with nx-libs 3.5.99.20.
      Previous version was broken and incomplete. Fixes: #1388.
